# RAG-for-Muffins

./: .gitignore  README.md  pyproject.toml
data/: cleaned_ingredients.txt  muffin_links.txt  raw_ingredients.txt  recipes.db
data/chromadb/: chroma.sqlite3
src/muffin/: app.py  constant.py  dummy.py  main.py  models.py  recipe.py  scraper.py  scrapper.py  utils.py
tests/: test_recipe.py  test_utils.py
