[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "Projet RAG à Muffin"
requires-python = ">=3.13"
dependencies = [
    "chromadb",
    "pandas",
    "httpx",
    "beautifulsoup4",
]

[tool.setuptools.packages.find]
where = ["src"]