[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "Projet RAG à Muffin"
requires-python = ">=3.13"
dependencies = [
    "chromadb",
    "pandas",
    "httpx",
    "beautifulsoup4",
    "sqlalchemy",
    "chromadb",
    "sentence-transformers",
    "pytest",
    "ollama",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
initialize_db = "muffin.models:setup_database"
fill_db = "muffin.models:raw_db_to_clean_db"
launch_ragamuffin = "muffin.main:main"