[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muffin"
version = "0.1.0"
description = "Projet RAG à Muffin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "pandas",
    "httpx",
    "beautifulsoup4",
    "sqlalchemy",
    "chromadb",
    "sentence-transformers",
    "ollama",
    "streamlit",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
scrap_recipes = "muffin.scraper:run_scraper"
initialize_db = "muffin.models:setup_database"
fill_db = "muffin.models:raw_db_to_clean_db"
